# chat-box

./: .gitignore  README.md  docker-compose.yml  init-db.sql
client/: index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js
client/src/: App.jsx  styles.css
client/src/components/: ChatBox.jsx  ChatSideBar.jsx  ChatTopBar.jsx
client/src/components/ChatBox/: ChatBox.jsx  ReplyBox.jsx
client/src/components/ChatSideBar/: ChatSideBar.jsx  ConversationTab.jsx  index.js
client/src/components/ui/: icon-button.jsx  icons.jsx
client/src/pages/: ChatPage.jsx
client/src/utils/: constMessages.js  conversationStorage.js  errorMessages.js
server/: Dockerfile  alembic.ini  chat_model_loader.py  config.py  main.py  pyproject.toml  pytest.ini  start.sh
server/alembic/: env.py
server/alembic/versions/: 50d66115989f_create_conversations_and_messages_table.py  c0d22b704e92_create_conversation_and_message_tables.py  ff68036068d0_create_user_table.py
server/config/: chat_model_config.py
server/database/: __init__.py  mysql.py
server/models/: __init__.py  conversation.py  message.py  user.py
server/routers/: __init__.py  auth.py  chat_model.py  conversation.py  user.py
server/schemas/: __init__.py  chat_model.py  conversation.py  user.py
server/services/: __init__.py  chat_model_services.py
server/tests/: __init__.py  conftest.py  test_chat_model_services.py  test_conversation_model.py  test_conversation_router.py  test_message_model.py  test_user_model.py
server/utils/: startup.py
~/Desktop/: Chat-Box_Project_Summary.md
