[project]
name = "chat-box-server"
version = "0.1.0"
description = "Chat application backend"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "dotenv>=0.9.9",
    "sqlalchemy>=2.0.43",
    "alembic>=1.14.1",
    "pydantic>=2.10.6",
    "pymysql>=1.1.1",
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "flake8>=5.0.4",
    "isort>=5.13.2",
]
