[project]
name = "chat-box-server"
version = "0.1.0"
description = "Chat application backend"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "dotenv>=0.9.9",
    "sqlalchemy>=2.0.43",
    "alembic>=1.14.1",
    "pydantic>=2.10.6",
    "pymysql>=1.1.1",
    "cryptography>=45.0.6",
    "bcrypt>=4.0.0",
    "transformers>=4.46.3",
    "accelerate>=1.10.0",
    "torch>=2.8.0",
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "flake8>=5.0.4",
    "httpx>=0.28.1",
    "isort>=5.13.2",
    "pytest>=8.3.5",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers", rev = "main" }
